--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,22 +1,20 @@
+
 <!DOCTYPE html>
-{% load static%}
-<html lang="pt">
+{% load static %}
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>{% block title %} Django Ecommerce {% endblock %}</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<link rel="stylesheet" href="{%static 'assets/bootstrap.min.css' %}" media="screen" />
-	<link rel="stylesheet" href="{% static 'assets/custom.min.css'%}" media="screen" />
+  <meta charset="utf-8">
+  <title>{% block title %}Django E-Commerce{% endblock %}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" href="{% static 'assets/bootstrap.min.css' %}" media="screen" />
+  <link rel="stylesheet" href="{% static 'assets/custom.min.css' %}" media="screen" />
 </head>
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="" class="navbar-brand"> Django Ecommerce </a>
-
-        
-
+          <a href="" class="navbar-brand">Django E-Commerce</a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -28,17 +26,22 @@
             <li>
               <a href="{% url 'index' %}">Início</a>
             </li>
+
+            <li>
+              <a href="{% url 'catalog:product_list' %}">Produtos</a>
+            </li>
+
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="{% url 'product_list' %}" id="download">Categorias <span class="caret"></span></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" href="{% url 'catalog:product_list' %}" id="download">Categorias <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="download">
-                <li><a href="{% url 'product_list' %}">Notebooks</a></li>
-				<li><a href="{% url 'product_list' %}">Acessórios</a></li>
-				<li><a href="{% url 'product_list' %}">Celulares</a></li>
+        {% for category in categories %}
+        <li><a href="#">{{ category }}</a></li>
+        {% endfor %}
               </ul>
             </li>
-			<li>
-				<a href="{% url 'contact' %}">Contato</a>
-			</li>
+      <li>
+        <a href="{% url 'contact' %}">Contato</a>
+      </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Minha Conta</a></li>
@@ -47,29 +50,22 @@
       </div>
     </div>
     <div class="container">
-      {% block container %}
-      {% endblock %}
-
-     
-		
-
-
-		<footer>
-			<div class="row">
-			  <div class="col-lg-12">
-			    <ul class="list-unstyled">
-			      <li class="pull-right"><a href="#top">Voltar ao Topo</a></li>
-			      <li><a href="{% url 'index' %}">Início</a></li>
-			      <li><a href="{% url 'product_list' %}">Produtos</a></li>
-			      <li><a href="{% url 'contact' %}">Contato</a></li>
-			      <li><a href="">Termos e Privacidade</a></li>
-			    </ul>
-			  </div>
-			</div>
-		</footer>
-     </div>
-	
-	<script src="{% static 'https://code.jquery.com/jquery-1.10.2.min.js' %}"></script>
-    <script src="{% static  'assets/bootstrap.min.js' %}"></script>
+    {% block container %}{% endblock %}
+    <footer>
+      <div class="row">
+        <div class="col-lg-12">
+          <ul class="list-unstyled">
+            <li class="pull-right"><a href="#top">Voltar ao Topo</a></li>
+            <li><a href="">Início</a></li>
+            <li><a href="">Produtos</a></li>
+            <li><a href="">Contato</a></li>
+            <li><a href="">Termos e Privacidade</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </div>
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="{% static 'assets/bootstrap.min.js' %}"></script>
 </body>
 </html>
