--- a/catalog/templates/catalog/category.html
+++ b/catalog/templates/catalog/category.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
-
+{% load pagination %}
 {% block title %}
 		{{ current_category }} | {{block.super}}
 {% endblock %}
 
 {% block container %}
+
 <div class="page-header">
 			<h1>{{current_category}}</h1>
 		</div>
@@ -24,5 +25,6 @@
 			</div>
 			{% endfor %}
 		</div>
+	{% pagination request paginator page_obj %}
 
 {% endblock %}
