--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
-
+{% load pagination %}
 {% block title %}
 Lista de produtos | {{block.super}}
 {% endblock %}
 
+
 {% block container %}
+
 <div class="page-header">
 			<h1>Produtos</h1>
 		</div>
@@ -22,7 +24,12 @@ Lista de produtos | {{block.super}}
 					</div>
 				</div>
 			</div>
+			{% empty %}
+			<h4>Não há produtos</h4>
 			{% endfor %}
 		</div>
+		
+
+		{% pagination request paginator page_obj %}
 
 {% endblock %}
