--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -27,13 +27,12 @@
               <a href="{% url 'index' %}">Início</a>
             </li>
 
-            <li>
-              <a href="{% url 'catalog:product_list' %}">Produtos</a>
-            </li>
+            
 
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="{% url 'catalog:product_list' %}" id="download">Categorias <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="download">
+              <li><a href="{% url 'catalog:product_list' %}">Todos os produtos</a></li>        
         {% for category in categories %}
         <li><a href="{{ category.get_absolute_url }}">{{ category }}</a></li>
         {% endfor %}
