--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -43,7 +43,15 @@
       </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Minha Conta</a></li>
+            {% if user.is_authenticated %}
+               <li>Olá, {{ user }}</li>
+               <li><a href="{% url 'logout' %}">Sair</a></li>
+            {% else %}
+                <li><a href="{% url 'login' %}">Entrar</a></li>
+            {% endif%}
+
+           
+            
           </ul>
         </div>
       </div>
