--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -48,6 +48,7 @@
                <li><a href="{% url 'logout' %}">Sair</a></li>
             {% else %}
                 <li><a href="{% url 'login' %}">Entrar</a></li>
+                <li><a href="{% url 'register' %}">Cadastre-se</a></li>
             {% endif%}
 
            
