--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -44,11 +44,12 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
-               <li>Olá, {{ user }}</li>
+               <li> >Olá, {{ user }}</li>
+               <li><a href="{% url 'accounts:index' %}">Minha Conta</a></li>
                <li><a href="{% url 'logout' %}">Sair</a></li>
             {% else %}
                 <li><a href="{% url 'login' %}">Entrar</a></li>
-                <li><a href="{% url 'register' %}">Cadastre-se</a></li>
+                <li><a href="{% url 'accounts:register' %}">Cadastre-se</a></li>
             {% endif%}
 
            
@@ -57,8 +58,11 @@
         </div>
       </div>
     </div>
+ 
     <div class="container">
-    {% block container %}{% endblock %}
+    {% block container %}
+
+    {% endblock %}
     <footer>
       <div class="row">
         <div class="col-lg-12">
