--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -43,6 +43,5 @@
                         </div>
                     </fieldset>
                 </form>
-            </div>}
-}
+            </div>
 {% endblock %}
